<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/searchAuction"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/moreOptions"
        android:icon="@drawable/ic_baseline_more_vert_24"
        android:title="@string/navigation"
        app:showAsAction="always" />

    <item
        android:id="@+id/exportAuctions"
        android:icon="@drawable/ic_baseline_ios_share_24"
        android:title="@string/export"
        app:showAsAction="always" />

</menu>