<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation.xml"
    app:startDestination="@id/homeFragment">

  <fragment
      android:id="@+id/homeFragment"
      android:name="com.example.presentation.ui.home.HomeFragment"
      android:label="@string/home"
      tools:layout="@layout/fragment_home" />
  <fragment
      android:id="@+id/auctionFragment"
      android:name="com.example.presentation.ui.auctions.AuctionFragment"
      android:label="@string/auctions"
      tools:layout="@layout/fragment_auction" />
  <fragment
      android:id="@+id/statFragment"
      android:name="com.example.presentation.ui.stat.StatFragment"
      android:label="@string/stat"
      tools:layout="@layout/fragment_stat" />
  <fragment
      android:id="@+id/leaderboardsFragment"
      android:name="com.example.presentation.ui.leaderboards.fragments.LeaderBoardsFragment"
      android:label="Ranking"
      tools:layout="@layout/fragment_leader_boards" >
    <action
        android:id="@+id/action_leaderboardsFragment_to_pvEFragment"
        app:destination="@id/pvEFragment" />
  </fragment>
  <fragment
      android:id="@+id/docFragment"
      android:name="com.example.presentation.ui.doc.DocFragment"
      android:label="@string/documentations"
      tools:layout="@layout/fragment_doc" />
  <fragment
      android:id="@+id/pvEFragment"
      android:name="com.example.presentation.ui.leaderboards.fragments.PvEFragment"
      android:label="PvE Players"
      tools:layout="@layout/fragment_pve">

    <argument
      android:name="type"
      app:argType="integer" />
    <action
        android:id="@+id/action_pvEFragment_to_pvEPlayerSearchDialog"
        app:destination="@id/pvEPlayerSearchDialog" />

  </fragment>
  <fragment
      android:id="@+id/pvEPlayerSearchDialog"
      android:name="com.example.presentation.ui.dialogs.searchPvEPlayers.PvEPlayerSearchDialog"
      android:label="SearchPvEPlayers"
      tools:layout="@layout/fragment_pv_e_player_search_dialog">


    <argument
      android:name="searchParams"
      app:argType="com.example.presentation.ui.dialogs.searchPvEPlayers.PvESearch" />
  </fragment>
</navigation>