<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".presentation.ui.leaderboards.fragments.PvPFragment">

  <HorizontalScrollView
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:fillViewport="true"
      android:scrollbars="none"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintBottom_toTopOf="@id/bottomPage">

    <LinearLayout
        android:id="@+id/ll_main"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

      <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/rootTitles"
          android:background="@color/white"
          android:orientation="horizontal"
          >

        <TextView
            android:id="@+id/tvPlayer"
            android:layout_width="162dp"
            android:layout_height="wrap_content"
            android:background="@drawable/tv_border_values"
            android:gravity="center"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:text="@string/player"
            android:textColor="@color/white"
            />

        <TextView
            android:id="@+id/tvRating"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@drawable/tv_border_values"
            android:gravity="center"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:text="@string/rating"
            android:textColor="@color/white"
            />


        <TextView
            android:id="@+id/tvELO"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@drawable/tv_border_values"
            android:gravity="center"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:text="@string/elo"
            android:textColor="@color/white"
            />

        <TextView
            android:id="@+id/tvActivity"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:background="@drawable/tv_border_values"
            android:gravity="center"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:text="@string/activity"
            android:textColor="@color/white"
            />

        <TextView
            android:id="@+id/tvMatches"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:background="@drawable/tv_border_values"
            android:gravity="center"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:text="@string/matches"
            android:textColor="@color/white"
            />

        <TextView
            android:id="@+id/tvWins"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:background="@drawable/tv_border_values"
            android:gravity="center"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:text="@string/wins"
            android:textColor="@color/white"
            />

        <TextView
            android:id="@+id/tvLosses"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:background="@drawable/tv_border_values"
            android:gravity="center"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:text="@string/losses"
            android:textColor="@color/white"
            />

      </LinearLayout>

      <androidx.recyclerview.widget.RecyclerView
          android:id="@+id/rvPvPPlayers"
          android:layout_width="wrap_content"
          android:layout_height="match_parent"
          android:orientation="vertical"
          />

    </LinearLayout>
  </HorizontalScrollView>

  <com.example.presentation.ui.customview.BottomPageNavigationView
      android:id="@+id/bottomPage"
      android:layout_width="match_parent"
      android:padding="10dp"
      android:layout_height="wrap_content"
      app:layout_constraintBottom_toBottomOf="parent"
      />

  <com.example.presentation.ui.customview.ProgressBarView
      android:id="@+id/prgSearch"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      />

  <com.example.presentation.ui.customview.ErrorView
      android:id="@+id/errorView"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      />

</androidx.constraintlayout.widget.ConstraintLayout>

