<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.ui.auctions.AuctionFragment">

        <TextView
            android:id="@+id/tvMinPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/min_price"
            app:layout_constraintEnd_toEndOf="@+id/etMinPrice"
            app:layout_constraintStart_toStartOf="@id/etMinPrice"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/maxPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/max_price"
            app:layout_constraintEnd_toEndOf="@+id/etMaxPrice"
            app:layout_constraintStart_toStartOf="@id/etMaxPrice"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tvResultsPerPage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/results_page"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/etResultsPerPage"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etMinPrice"
            style="@style/textInputAttributes"
            app:layout_constraintEnd_toStartOf="@id/etMaxPrice"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvMinPrice">

        </com.google.android.material.textfield.TextInputEditText>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etMaxPrice"
            style="@style/textInputAttributes"
            app:layout_constraintEnd_toStartOf="@id/etResultsPerPage"
            app:layout_constraintStart_toEndOf="@id/etMinPrice"
            app:layout_constraintTop_toBottomOf="@id/tvMinPrice">

        </com.google.android.material.textfield.TextInputEditText>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etResultsPerPage"
            style="@style/textInputAttributes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/etMaxPrice"
            app:layout_constraintTop_toBottomOf="@id/tvMinPrice">

        </com.google.android.material.textfield.TextInputEditText>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvAuction"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/tvSearchedResults"
            app:layout_constraintTop_toBottomOf="@id/etMaxPrice" />

        <TextView
            android:id="@+id/tvSearchedResults"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/searched"
            app:layout_constraintBottom_toTopOf="@id/coordinatorLayout"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/coordinatorLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            app:layout_constraintBottom_toBottomOf="parent">

            <com.google.android.material.bottomappbar.BottomAppBar
                android:id="@+id/bottomAppBar"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:backgroundTint="@color/black"
                android:gravity="bottom">

            </com.google.android.material.bottomappbar.BottomAppBar>

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:src="@drawable/ic_baseline_arrow_back_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/coordinatorLayout"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/ivForward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:src="@drawable/ic_baseline_arrow_forward_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/coordinatorLayout"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/ivForward"
            app:layout_constraintStart_toEndOf="@id/ivBack"
            app:layout_constraintTop_toTopOf="@id/coordinatorLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
